<resources>
    <string name="app_name">Covid19-NG</string>
    <string name="covid_19">Covid-19</string>
    <string name="NG">NG</string>

    <!-- Slide screen-->
    <string name="slide_1_desc">Protect yourself from coronavirus pandemic!</string>
    <string name="slide_2_desc">Keep yourself and your family home quarantied!</string>
    <string name="slide_3_desc">Follow the directions of your local health authority!</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="get_started">Get Started</string>

    <!-- Home screen-->
    <string name="latest_updates">Latest Updates</string>
    <string name="confirmed_cases">Confirmed</string>
    <string name="recovered_cases">Recovered</string>
    <string name="death_cases">Deaths</string>
    <string name="today">TODAY</string>
    <string name="today_confirmed_cases">Confirmed:</string>
    <string name="today_recovered_cases">Recovered:</string>
    <string name="today_death_cases">Death:</string>
    <string name="safety">Safety</string>
    <string name="symptoms">Symptoms</string>
    <string name="call_text">Experiencing symptoms?</string>
    <string name="call_now">Call Now!</string>
    <string name="todo">Feeling bored? Try these...</string>
    <string name="shop_home">Shop</string>
    <string name="learn_skill">Learn</string>
    <string name="watch_movie">Movies</string>
    <string name="read_book">Read</string>
    <string name="call_friend">Call</string>
    <string name="news">News</string>
    <string name="entertainment">Entertainment</string>

    <!-- Symptoms screen-->
    <string name="one">1.</string>
    <string name="cough">Cough</string>
    <string name="two">2.</string>
    <string name="fever">High temperature (Fever)</string>
    <string name="three">3.</string>
    <string name="tiredness">Tiredness</string>
    <string name="four">4.</string>
    <string name="difficulty_breathing">Difficulty Breathing (Severe cases)</string>
    <string name="info_text">It is worth noting that people may be with the virus for 1&#8211;14 days without developing symptoms.</string>

    <!-- Bottom Nav-->
    <string name="home">Home</string>
    <string name="cases">Cases</string>
    <string name="total_cases">Total Cases</string>
    <string name="cases_ng">Cases in Nigeria</string>

    <!-- Cases fragment -->
    <string name="all_cases_states">All cases in each state</string>
    <string name="sort_by">Sort By:</string>
    <string name="states">States</string>

    <!-- News fragment -->
    <string name="news_start_text">Get first hand real time news on coronavirus pandemic from various authentic sources below:</string>
    <string name="who_text">World Health Organization coronavirus updates</string>
    <string name="ncdc_text">Nigeria Center for Disease Control updates</string>
    <string name="bbc_text">BBC updates on covid-19</string>
    <string name="aljazeera_text">Aljazeera updates on coronavirus</string>
    <string name="vanguard_text">Vanguard updates on coronavirus</string>
    <string name="nytimes_text">The New York Times Live news updates on coronavirus</string>
    <string name="wikipedia_text">Wikipedia information and update on the coronavirus pandemic</string>

    <!-- Shop activity -->
    <string name="shop_from_home">Shop from home</string>
    <string name="shop_details_text">Get basic needs such as food and pharmaceutical from government approved stores and pharmacies</string>
    <string name="select_state">Select your state</string>
    <string-array name="states_array">
        <item>Abia</item>
        <item>Adamawa</item>
        <item>Akwa Ibom</item>
        <item>Anambra</item>
        <item>Bauchi</item>
        <item>Benue</item>
        <item>Borno</item>
        <item>Cross River</item>
        <item>Delta</item>
        <item>Ebonyi</item>
        <item>Edo</item>
    </string-array>

    <!-- Learn Skill activity -->
    <string name="learn_a_skill">Learn A Skill</string>
    <string name="select_skill">Select a skill</string>
    <string name="blockchain">Blockchain</string>
    <string name="cooking">Cooking</string>

    <!-- Learn Skill activity -->
    <string name="call_a_friend">Call A Friend</string>

    <!-- Call activity -->
    <string name="call_text_details">Now is the right time to strengthen existing relationships, fix strained relationships, or build one. Make that call NOW!!</string>

    <!-- About activity -->
    <string name="about">About</string>
    <string name="ib_fullname">Inuwa Ibrahim</string>
    <string name="ma_fullname">Abdull Maraya</string>
    <string name="contact_me">Contact me</string>
    <string name="ib_email">Ibrahimcodes@gmail.com</string>
    <string name="ma_email">Ibrahimcodes@gmail.com</string>
    <string name="made_by">Made with love by</string>

</resources>
