<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipeRefresh"
    tools:context=".HomeActivity"
    android:background="@color/home_bg"
    android:paddingBottom="56dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_container">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/headerSection"
                android:background="@color/white">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/newsText"
                    android:text="@string/news"
                    android:layout_marginTop="21dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"/>

            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/newsImage"
                android:layout_below="@+id/headerSection"
                app:srcCompat="@drawable/ic_undraw_news"
                android:layout_marginTop="20dp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newsSection"
                android:layout_below="@+id/newsImage"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_corner_2">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/newsStartText">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/news_start_text"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:paddingRight="20dp"
                        android:textAlignment="center"
                        android:layout_marginBottom="10dp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider"
                    android:layout_alignBottom="@id/newsStartText"
                    android:id="@+id/divider"
                    android:layout_marginBottom="10dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/newsSite"
                    android:layout_below="@+id/newsStartText"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/who"
                        android:text="@string/who_text"
                        android:textColor="@color/light_blue"
                        android:autoLink="web"
                        android:layout_marginBottom="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ncdc"
                        android:text="@string/ncdc_text"
                        android:textColor="@color/light_blue"
                        android:autoLink="web"
                        android:layout_marginBottom="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/bbc"
                        android:text="@string/bbc_text"
                        android:textColor="@color/light_blue"
                        android:autoLink="web"
                        android:layout_marginBottom="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/aljazeera"
                        android:text="@string/aljazeera_text"
                        android:textColor="@color/light_blue"
                        android:autoLink="web"
                        android:layout_marginBottom="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/vanguard"
                        android:text="@string/vanguard_text"
                        android:textColor="@color/light_blue"
                        android:autoLink="web"
                        android:layout_marginBottom="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/nytimes"
                        android:text="@string/nytimes_text"
                        android:textColor="@color/light_blue"
                        android:autoLink="web"
                        android:layout_marginBottom="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/wikipedia"
                        android:text="@string/wikipedia_text"
                        android:textColor="@color/light_blue"
                        android:autoLink="web"
                        android:layout_marginBottom="10dp"
                        />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>