<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipeRefresh"
    tools:context=".HomeActivity"
    android:background="@color/home_bg"
    android:paddingBottom="56dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_container">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/headerSection"
                android:background="@color/white">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/casesHeaderText"
                        android:text="@string/cases_ng"
                        android:layout_marginTop="21dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/updatesSection"
                android:layout_below="@+id/headerSection"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_corner_2"
                >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/latestUpdatesSection"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/latestUpdatesText"
                        android:text="@string/total_cases"
                        android:textStyle="bold"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        />

                    <!--<com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        app:ccp_defaultNameCode="NG"
                        app:ccp_showNameCode="false"
                        app:ccp_showPhoneCode="false"
                        app:ccpDialog_showCloseIcon="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_centerHorizontal="true"
                        />-->

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/naijaFlag"
                        android:layout_centerHorizontal="true"
                        android:layout_centerInParent="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/figuresSection"
                    android:layout_below="@+id/latestUpdatesSection"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/progressBar"
                        android:visibility="gone"
                        android:indeterminate="true"
                        android:layout_centerInParent="true"
                        />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/confirmedCasesNumber"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:textColor="@color/yellow"
                        />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/confirmedCasesText"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:text="@string/confirmed_cases"
                        android:layout_below="@+id/confirmedCasesNumber"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/yellow"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/recoveredCasesNumber"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/green"
                        android:gravity="center"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/recoveredCasesText"
                        android:text="@string/recovered_cases"
                        android:layout_below="@+id/recoveredCasesNumber"
                        android:textStyle="bold"
                        android:textColor="@color/green"
                        android:gravity="center"
                        />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/deathCasesNumber"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:textAlignment="center"
                        android:textColor="@color/red"
                        android:gravity="center"
                        />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/deathCasesText"
                        android:text="@string/death_cases"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/deathCasesNumber"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/red"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/todaySection"
                    android:layout_below="@+id/figuresSection"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginEnd="20dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/today"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:textSize="10sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/todayConfirmedText"
                            android:text="@string/today_confirmed_cases"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:textSize="10sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/todayConfirmedNumber"
                            android:textSize="10sp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/todayRecoveredText"
                            android:text="@string/today_recovered_cases"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:textSize="10sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/todayCriticalNumber"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:textSize="10sp"
                            />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/todayDeathText"
                            android:text="@string/today_death_cases"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:textSize="10sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/todayDeathNumber"
                            android:textSize="10sp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="10dp"
                            />

                    </LinearLayout>


                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/callSec"
                android:layout_below="@+id/updatesSection"
                android:background="@drawable/rounded_corner_2"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/casesText"
                    android:text="@string/all_cases_states"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:gravity="center"
                    />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sortSection"
                    android:layout_below="@+id/casesText"
                    android:layout_marginBottom="20dp"
                    >

                    <!--<TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sortText"
                        android:layout_toStartOf="@+id/sortIcon"
                        android:layout_toLeftOf="@+id/sortIcon"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/sort_by" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sortIcon"
                        app:srcCompat="@drawable/ic_sort"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="20dp"
                        android:layout_marginRight="20dp" />-->

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sortSection"
                    android:id="@+id/stateCases"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/states"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:text="@string/states"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cases"
                        android:text="@string/cases"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="20dp"
                        android:textStyle="bold" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/stateCases"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/progressBar2"
                        android:layout_centerInParent="true"
                        android:visibility="gone"
                        />


                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/statesCasesRecyclerView"/>

                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>